--- a/Assets/Nova/package.json
+++ b/Assets/Nova/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jp.co.cyberagent.nova",
   "displayName": "NOVA Shader",
-  "version": "1.5.2.1",
+  "version": "1.5.1-patched",
   "unity": "2023.2",
   "license": "MIT",
   "dependencies": {
